# Boerschappen-AGF-Pickup-Robot

./: .gitignore  README.md
lite6_ws/src/interfaces/: CMakeLists.txt  package.xml
lite6_ws/src/lite6_msgs/: CMakeLists.txt  package.xml
lite6_ws/src/lite6_msgs/msg/: Lite6pose.msg
lite6_ws/src/uf_ros_lib/uf_ros_lib/: moveit_configs_builder.py  uf_robot_utils.py
lite6_ws/src/uf_ros_lib/uf_ros_lib/substitutions/: planning_pipelines.py
lite6_ws/src/xarm_description/launch/: _robot_description.launch.py
lite6_ws/src/xarm_description/urdf/: xarm_device_macro.xacro
lite6_ws/src/xarm_description/urdf/gripper/: xarm_gripper_macro.xacro
lite6_ws/src/xarm_moveit_config/launch/: _dual_robot_moveit_gazebo.launch.py  _dual_robot_moveit_gz.launch.py  _dual_robot_moveit_realmove.launch.py  _robot_moveit_common2.launch.py  _robot_moveit_gazebo.launch.py  lite6_moveit_gazebo.launch.py  uf850_moveit_gazebo.launch.py  xarm5_moveit_gazebo.launch.py  xarm6_moveit_gazebo.launch.py  xarm7_mirror_moveit_gazebo.launch.py  xarm7_moveit_gazebo.launch.py
lite6_ws/src/xarm_moveit_config/launch/lib/: robot_moveit_config_lib.py
lite6_ws/src/xarm_msgs/: CMakeLists.txt  ReadMe.md
lite6_ws/src/xarm_msgs/msg/: MoveVelocity.msg
lite6_ws/src/xarm_msgs/srv/: Call.srv  FtAdmittanceParams.srv  FtCaliLoad.srv  FtForceConfig.srv  FtForceParams.srv  FtForcePid.srv  FtImpedance.srv  GetInt16.srv  GetInt16List.srv  IdenLoad.srv  LinearMotorBackOrigin.srv  LinearMotorSetPos.srv  LinearTrackBackOrigin.srv  LinearTrackSetPos.srv  SetInt16.srv  VacuumGripperCtrl.srv
lite6_ws/src/xarm_planner/: CMakeLists.txt  package.xml
lite6_ws/src/xarm_planner/include/xarm_planner/: xarm_planner.h
lite6_ws/src/xarm_planner/launch/: lite6_control.launch.py
lite6_ws/src/xarm_planner/src/: lite6_control.cpp  xarm_planner.cpp
